<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lugares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_info">Info</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="label_processando">Processando...</string>
    <string name="title_activity_lugar_exibir">Informações</string>
    <string name="title_activity_lugar_editar">Atualizar Informações</string>


    <!-- Tela Exibicao de Lugar -->
    <string name="lbl_nome">Nome</string>
    <string name="lbl_telefone_exibicao">Telefone</string>
    <string name="lbl_telefone_edicao">Telefone (ex: 5511912345678)</string>
    <string name="lbl_meta_proxima_viagem">Meta para a Proxima Viagem</string>
    <string name="lbl_data_proxima_viagem">Data da Proxima Viagem</string>
    <string name="lbl_hashtag">Hashtag</string>

    <string name="btn_Atualizar">Atualizar Informacoes</string>
    <string name="btn_Limpar">Limpar</string>
    <string name="btn_Salvar">Salvar</string>
    
    <string name="lbl_telefone_instrucao">Pressione o telefone ao lado para ligar</string>
</resources>
