<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/conteiner"
    tools:context="com.portoseguro.conecta.lugares.LugarExibirActivity"
    >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	     >
	
	    <LinearLayout
	        android:id="@+id/lugar.quadroInformacoes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        
	        android:orientation="vertical" >
	        <!-- android:layout_marginLeft="19dp"
	        android:layout_marginTop="21dp" -->
	
			<!-- Linha  Nome -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
				<TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_nome"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/lugar.lblNome"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
			<!-- Linha Telefone  -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_telefone_exibicao"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/lugar.lblTelefone"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
			<!-- Linha Meta para Proxima Viagem -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_meta_proxima_viagem"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/lugar.lblMetaProximaViagem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
			<!-- Linha Data da Proxima Viagem -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_data_proxima_viagem"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/lugar.lblDataProximaViagem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
			<!-- Linha Hashtag -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_hashtag"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/lugar.lblHashtag"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/lugar.btnAtualizar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/lugar.quadroInformacoes"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="18dp"
	        android:paddingLeft="19dp"
		    android:paddingRight="19dp"
	        android:background="#6ba39a"
	        android:text="@string/btn_Atualizar"
	        android:textColor="@android:color/white" />
	
	</RelativeLayout>
</ScrollView>