<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:id="@+id/conteiner"
     tools:context="com.portoseguro.conecta.lugares.LugarExibirActivity"
    >
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
     >

	    <LinearLayout
	        android:id="@+id/lugar.quadroInformacoes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        
	        android:orientation="vertical" >
	        <!-- android:layout_marginLeft="19dp"
	        android:layout_marginTop="21dp" -->
	
			<!-- Linha  Nome -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
				<TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_nome"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <EditText
	                android:id="@+id/lugar.txtNome"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:hint="@string/lbl_nome"
	                android:inputType="textPersonName"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <View style="@style/divisoria"/>
	        </LinearLayout>
			<!-- Linha Telefone  -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_telefone"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <EditText
	                android:id="@+id/lugar.txtTelefone"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:hint="@string/lbl_telefone"
	                android:inputType="phone"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <View style="@style/divisoria"/>
	        </LinearLayout>
			<!-- Linha Meta para Proxima Viagem -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_meta_proxima_viagem"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <EditText
	                android:id="@+id/lugar.txtMetaProximaViagem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:hint="@string/lbl_meta_proxima_viagem"
	                android:inputType="textPostalAddress"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <View style="@style/divisoria"/>
	        </LinearLayout>
			<!-- Linha Data da Proxima Viagem -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_data_proxima_viagem"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <EditText
	                android:id="@+id/lugar.txtDataProximaViagem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:hint="@string/lbl_data_proxima_viagem"
	                android:inputType="date"
	                android:editable="false"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <View style="@style/divisoria"/>
	        </LinearLayout>
			<!-- Linha Hashtag -->
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_hashtag"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <EditText
	                android:id="@+id/lugar.txtHashtag"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/darker_gray"
	                android:hint="@string/lbl_hashtag"
	                android:inputType="text"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        <View style="@style/divisoria"/>
	    </LinearLayout>

	    <RelativeLayout 
	        android:id="@+id/lugar.quadroBotoes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="21dp"
	        android:layout_below="@+id/lugar.quadroInformacoes"
	        >
	        <Button
		        android:id="@+id/lugar.btnLimpar"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/lugar.btnSalvar"
		        android:layout_alignBottom="@+id/lugar.btnSalvar"
		        android:background="#cb4343"
		        android:text="@string/btn_Limpar"
		        android:textColor="@android:color/white"
		        android:paddingLeft="19dp"
		        android:paddingRight="19dp"
		         />

	        <Button
	            android:id="@+id/lugar.btnSalvar"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="44dp"
	            android:background="#6ba39a"
	            android:layout_toRightOf="@+id/lugar.btnLimpar"
	            android:text="@string/btn_Salvar"
	            android:paddingLeft="19dp"
		        android:paddingRight="19dp"
	            android:textColor="@android:color/white" />

	    </RelativeLayout>

        

</RelativeLayout>
</ScrollView>